Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-7078

warmup can fail stopping data loading even when it reaches the low water mark

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0
    • 2.0
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      Hypothetically this can only happen not by a code bug per se but by a side effect of compiler optimization (so called Peephole Optimization). Very rarely though if possible at all. Highly optimized compiler can reorder or merge stillWarmingUp() function calls within ep engine's CouchKVStore::recordDbDump. In such case the logic of canceling data loading is broken thus the warmup continues to keep loading data even after the total memory use reaches the low water mark.

      For correctness of the warmup logic, we may want to address this issue by replacing stillWarmingUp() call with isDegradedMode() or by making use of a volatile local variable.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jin Jin Lim (Inactive)
            jin Jin Lim (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty