MB-7078 use volatile variable and isDegradedMode() to evaluate warmup

Change-Id: I026a519aeaf912b4ce6c2db0e6a88ab2a4b7078b
Reviewed-on: http://review.couchbase.org/22221
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>